syntax = "proto3";

message CfgEnergyBackup {
  optional uint32 energy_backup_en = 1;
  optional uint32 energy_backup_start_soc = 2;
}

message SetDp3 {
    optional int32 cfg_power_off = 3;
    optional uint32 cfg_utc_time = 6;
    optional int32 cfg_utc_timezone = 7;
    optional int32 en_beep = 9;
    optional int32 ac_standby_time = 10;
    optional int32 dc_standby_time = 11;
    optional int32 screen_off_time = 12;
    optional int32 dev_standby_time = 13;
    optional int32 lcd_light = 14;
    optional int32 cfg_dc12v_out_open = 18;
    optional int32 xboost_en = 25;
    optional int32 cms_max_chg_soc = 33;
    optional int32 cms_min_dsg_soc = 34;
    optional int32 plug_in_info_ac_in_chg_pow_max = 54;
    optional uint32 cfg_ac_out_open = 76;
    optional uint32 cfg_led_mode = 89;
    optional CfgEnergyBackup cfg_energy_backup = 43;
    optional int32 output_power_off_memory = 141;
    optional uint32 plug_in_info_pv_dc_amp_max = 87;
    optional uint32 pv_chg_type = 90;
}

message SetReplyDp3 {
    optional int32 action_id = 1;
    optional bool config_ok = 2;
    optional uint32 cfg_utc_time = 6;
    optional int32 cfg_utc_timezone = 7;
    optional int32 en_beep = 9;
    optional int32 ac_standby_time = 10;
    optional int32 dc_standby_time = 11;
    optional int32 screen_off_time = 12;
    optional int32 dev_standby_time = 13;
    optional int32 lcd_light = 14;
    optional int32 cfg_dc12v_out_open = 18;
    optional int32 xboost_en = 25;
    optional int32 cms_max_chg_soc = 33;
    optional int32 cms_min_dsg_soc = 34;
    optional int32 plug_in_info_ac_in_chg_pow_max = 54;
    optional uint32 cfg_ac_out_open = 76;
    optional uint32 cfg_led_mode = 89;
    optional CfgEnergyBackup cfg_energy_backup = 43;
    optional int32 output_power_off_memory = 141;
    optional uint32 plug_in_info_pv_dc_amp_max = 87;
    optional uint32 pv_chg_type = 90;
}

